--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,4 +4,28 @@
 
 .header-container{
   background-color: $primary-color;
+  padding: 20px;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.logo h1{
+  color: $secondary-color;
+  font-family: 'Roboto',sans-serif;
+
+}
+.nav-links{
+  display: flex;
+  gap: 15px;
+
+}
+.nav-links a{
+  cursor: pointer;
+  color: $secondary-color;
+  text-decoration: none;
+  font-family: 'Roboto',sans-serif;
+  font-weight: 500;
+
 }
