--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,5 @@
-// cores
+body{
+  margin: 0;
+  padding: 0;
 
-$primary-color:#000000;
-$secondary-color:#ffffff;
-$tertiary-color:#AAFF1E;
-
-
-
+}
