--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,14 +1,18 @@
 
 @import 'Styles/styleVariable.scss';
 
-
+body {
+  margin: 0;
+}
 .header-container{
   background-color: $primary-color;
-  padding: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
   width: 100%;
-  height: 50px;
   display: flex;
   justify-content: space-between;
+  box-sizing: border-box;
+
 }
 
 .logo h1{
@@ -18,10 +22,12 @@
 }
 .nav-links{
   display: flex;
-  gap: 15px;
+  gap: 30px;
 
 }
 .nav-links a{
+  margin-top: 25px;
+  display: flex;
   cursor: pointer;
   color: $secondary-color;
   text-decoration: none;
